force-app/main/default/objects/bpats__ATS_Demo_Data_Info__mdt/bpats__ATS_Demo_Data_Info__mdt.object-meta.xml
<CustomObject>
    <label>ATS Demo Data Info</label>
    <pluralLabel>ATS Demo Data Info</pluralLabel>
</CustomObject>