force-app/main/default/objects/bpats__ATS_Demo_Data_Info__mdt/fields/bpats__Interview_Template_Record_Id_JSON__c.field-meta.xml
<CustomField>
    <fullName>bpats__Interview_Template_Record_Id_JSON__c</fullName>
    <label>Interview Template Record Id JSON</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>