force-app/main/default/objects/bpats__ATS_Demo_Data_Info__mdt/fields/bpats__Placement_Credit_Record_Ids_JSON__c.field-meta.xml
<CustomField>
    <fullName>bpats__Placement_Credit_Record_Ids_JSON__c</fullName>
    <label>Placement Credit Record Ids JSON</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>